# magnum-web-application-template

./: .gitignore  README.md  package.json  webpack.config.js
modules/: FindMagnum.cmake  UseEmscripten.cmake
src/: CMakeLists.txt  EmscriptenApplication.js  MyApplication.cpp  MyApplication.html  WebApplication.css  main.js
